--- a/aplikacja_python/frontend/tsconfig.json
+++ b/aplikacja_python/frontend/tsconfig.json
@@ -13,7 +13,8 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@shared/*": ["../../shared/*"]
     }
   },
   "include": ["src"],
